Add sound files, new models, textures, items and new game mechanics

--- a/game.conf
+++ b/game.conf
@@ -3,4 +3,4 @@ author = NO11
 description = A hot air balloon game created for the Minetest game jam 2021.
 
 allowed_mapgens = carpathian
-disabled_settings = creative_mode, enable_damage, enable_server
+disabled_settings = creative_mode, enable_damage
