--- a/game.conf
+++ b/game.conf
@@ -1,6 +1,6 @@
 name = Balloonair
 author = NO11
-description = A hot air balloon game created for the Minetest game jam 2021.
+description = A hot air balloon game created for the 2021 Minetest GAME JAM.
 
 allowed_mapgens = carpathian
 disabled_settings = creative_mode, enable_damage
